@@ -13,8 +13,6 @@ end
 -------------------------------------------------------------------------------------------------------------------------
 -------------------------------------------------------------------------------------------------------------------------
 
-local enabled = true
-
 if not (gadgetHandler:IsSyncedCode()) then --synced only
 	return false
 end
